# dAuth

./: .gitignore  DEVELOPING.md  Deployment.md  README.md  Vagrantfile  sawtooth-poet-rerun.yaml  sawtooth-poet.yaml  sawtooth-solo.yaml  setup.py
Vagrant/: Vagrantfile
analysis/: .gitignore  constants.py  dauth-backup-count-impact.py  dauth-backup-threshold-impact.py  dauth-backup-vs-cloud-core.py  dauth-home-vs-cloud-core.py  helpers.py  home-net-offline.py  home-net-online.py  pyproject.toml  srsran_timing.py
ansible/: .gitignore  (+5 more)
dAuth-cpp/: .gitignore  CMakeLists.txt
dAuth-cpp/proto/: example.proto
infra/: buildall.sh  clearall.sh  deploy.py  deployall.sh  pyproject.toml
infra/keys/: .gitignore  README.md
manager-rs/dauth-service/: Cargo.toml  build.rs
manager-rs/dauth-service/src/: main.rs  manager.rs  startup.rs  tasks.rs
manager-rs/dauth-service/src/core/: auth_vectors.rs  confirm_keys.rs  users.rs
manager-rs/dauth-service/src/data/: auth_vector.rs  config.rs  constants.rs  context.rs  conversion.rs  database.rs  error.rs  keys.rs  mod.rs  opt.rs  signing.rs  state.rs  user_info.rs  utilities.rs  vector.rs
manager-rs/dauth-service/src/database/: auth_vectors.rs  backup_networks.rs  backup_users.rs  flood_vectors.rs  general.rs  key_share_state.rs  key_shares.rs  kseafs.rs  mod.rs  user_infos.rs  utilities.rs  vector_state.rs
manager-rs/dauth-service/src/database/tasks/: mod.rs  replace_key_shares.rs  report_auth_vectors.rs  report_key_shares.rs  update_users.rs
manager-rs/dauth-service/src/local/: database.rs  manager.rs  mod.rs  queries.rs
manager-rs/dauth-service/src/remote/: manager.rs
manager-rs/dauth-service/src/rpc/: clients.rs  handler.rs  mod.rs  server.rs  utilities.rs
manager-rs/dauth-service/src/tasks/: mod.rs  replace_key_shares.rs  report_auth_vectors.rs  report_key_shares.rs  task_manager.rs  update_users.rs
manager-rs/local-manager/: Cargo.toml  build.rs
manager-rs/local-manager/src/: main.rs
open5gs/lib/grpc/: meson.build
open5gs/src/ausf/: ausf-sm.c  ausf-sm.h  context.c  context.h  dauth-c-binding.cpp  dauth-c-binding.h  dauth-context-c-binding.h  dauth-context-util.hpp  dauth-context.cpp  dauth-context.hpp  dauth-local-auth-client.cpp  dauth-local-auth-client.hpp  dauth-server-context.cpp  dauth-server-context.hpp  dauth-shim.cpp  dauth-shim.h  event.c  event.h  init.c  meson.build  nausf-handler.c
services/dauth-service/: Cargo.toml  README.md  build.rs  default-cli-config.yaml  default-config.yaml  default-dauth-config.yaml
services/dauth-service/configs/: default-cli-config.yaml  default-dauth-config-1.yaml  default-dauth-config-2.yaml  default-dauth-config.yaml  sample-cli-config.yaml  sample-dauth-config-1.yaml  sample-dauth-config-2.yaml
services/dauth-service/init/: dauth.service
services/dauth-service/pkg/scripts/: postinst.sh
services/dauth-service/src/: lib.rs  main.rs  management.rs  startup.rs
services/dauth-service/src/common/: auth_vectors.rs  confirm_keys.rs  mod.rs
services/dauth-service/src/core/: auth_vectors.rs  confirm_keys.rs  mod.rs
services/dauth-service/src/data/: combined_res.rs  config.rs  context.rs  error.rs  keys.rs  mod.rs  signing.rs  state.rs  user_info.rs  utilities.rs  vector.rs
services/dauth-service/src/database/: auth_vectors.rs  backup_networks.rs  backup_users.rs  flood_vectors.rs  general.rs  kasmes.rs  key_share_state.rs  key_shares.rs  kseafs.rs  mod.rs  user_infos.rs  utilities.rs  vector_state.rs
services/dauth-service/src/rpc/: mod.rs  server.rs  utilities.rs
services/dauth-service/src/services/: mod.rs
services/dauth-service/src/tasks/: metrics.rs  mod.rs  register.rs  replace_key_shares.rs  report_auth_vectors.rs  report_key_shares.rs  task_manager.rs  update_users.rs
services/dauth-tests/: Cargo.toml  README.md
services/dauth-tests/src/: lib.rs  test_core.rs  test_dauth.rs  test_dauth_context.rs  test_directory.rs  test_directory_context.rs
services/dauth-tests/tests/: test_user_auth.rs  test_user_registration.rs  test_user_withdraw.rs
testing/: README.md  main.py  pyproject.toml  setup.py  ue_stress_test_example.py
testing/colte_tests/: logger.py  main.py
testing/colte_tests/nodes/: colte_node.py  command_exception.py  node.py  ueransim_node.py
testing/configs/: gnb-2.yaml  gnb-4.yaml  gnb.yaml  service.yaml  service2.yaml  service3.yaml  ue.yaml
testing/connections/: connection.py  directory_connection.py  open5gs_connection.py  service_connection.py  ueransim_connection.py
testing/dauth_testing/: logger.py  main.py
testing/dauth_testing/scripts/: dauth_directory.py  dauth_service.py
testing/dauth_testing/vms/: dauth_directory_vm copy.py  dauth_directory_vm.py  dauth_service_vm.py  open5gs_vm.py  ueransim_vm.py  vm.py
testing/perf/: config.py  exception.py  metrics.py  run_perf.py  state.py  ue_driver.py
testing/perf/dauth_testing/base/: 1.yaml  2.yaml  3.yaml  4.yaml
testing/perf/dauth_testing/metric_baseline/: run_tests.sh
testing/perf/dauth_testing/metric_set_1/: build_configs.py  run_tests.sh
testing/perf/dauth_testing/metric_set_2/: build_configs.py  run_tests.sh
testing/perf/network_configs/: full_network.yaml  vagrant.yaml
testing/perf/network_configs/basic/: vagrant.yaml
testing/perf/network_configs/full_network/: Hestia_Prothean.yaml  Prothean_Hestia.yaml
testing/perf/network_configs/scripts/: full_network_tests.sh  single_node_tests.sh
testing/perf/network_configs/single_node/: AWS.yaml  Azure.yaml  Boron.yaml  Prothean.yaml  uwbts3.yaml
testing/perf/sample_configs/: vagrant.yaml
testing/perf/sample_configs/full_network/: Hestia_Prothean.yaml
testing/perf/sample_configs/single_node/: Digital_Ocean.yaml  uwbts2.yaml
testing/perf/sample_scripts/: backup_perf.sh  home_perf.sh  local_perf.sh
testing/perf/setups/: backup_auth.py  common.py  home_auth.py  local_auth.py
testing/scripts/: dauth_directory.py  dauth_service.py  full_reset.sh
testing/tests/: common.py  config.py  local_auth_tests.py
testing/vms/: dauth_directory_vm.py  dauth_service_vm.py  open5gs_vm.py  ueransim_vm.py  vm.py
(+321 files in other folders)
