[package]
name = "dauth-service"
version = "0.1.0"
edition = "2021"
default-run = "dauth-service"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "^0.6.1"
prost = "0.9"
tokio = { version = "^1.20.4", features = ["macros", "rt-multi-thread"]}
tokio-metrics = "0.1.0"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = {version = "0.3.11", features = ["fmt", "env-filter"]}
hex = "0.4.3"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
structopt = "0.3"
rand = "0.7"
rand-0-8 = { package = "rand", version="0.8" }
ed25519-dalek = "1.0"
shamir = { git = "https://github.com/matt9j/shamir" }
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls" , "sqlite" ] }
auth-vector = { path = "../auth-vector" }

[dev-dependencies]
tempfile = "3.3"
test-log = { version = "0.2.10", features = ["trace"], default-features = false }

[build-dependencies]
tonic-build = "0.6"
