[package]
name = "dauth-tests"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
rand = "0.7"
tempfile = "3.3"
test-log = { version = "0.2.10", features = ["trace"], default-features = false }
dauth-service = { path = "../dauth-service" }
directory-service = { path = "../directory-service" }
